--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "node-microservice",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "repository": "https://github.com/balpal4495/node-microservice.git",
   "author": "baljit <baljit@trint.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon server.js",
+    "test": "jest --watch --maxWorkers=1",
+    "test:report": "jest --collectCoverage"
+  },
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nanoid": "^3.1.12",
+    "nodemon": "^2.0.4",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2"
   }
 }
